--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "protfolioproject",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Amanda Gallant Art Gallery",
+  "main": "home.html",
   "scripts": {
+    "lite": "lite-server",
+    "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
